--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "export": "nuxt export",
-    "serve": "nuxt serve"
+    "serve": "nuxt serve",
+    "gh": "nuxt build:gh"
   },
   "dependencies": {
     "@nuxtjs/auth": "^4.9.1",
