--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ typings/
 .nuxt
 
 # Nuxt generate
-# dist
+dist
 
 # vuepress build output
 .vuepress/dist
@@ -88,4 +88,3 @@ sw.*
 
 # Vim swap files
 *.swp
-/static/fontawsome/
