--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
+    "build:gh": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate"
   },
@@ -13,6 +14,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/bulma": "^1.3.0",
     "core-js": "^3.6.5",
+    "cross-env": "^7.0.2",
     "nuxt": "^2.14.6",
     "vuelidate": "^0.7.5"
   },
